--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    
+    <dependencies>
+        <!-- JUnit 5 Dependency -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.11.3</version> <!-- Check for the latest version -->
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
