--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,10 @@
             <version>5.11.3</version> <!-- Check for the latest version -->
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.18.1</version> <!-- Replace with the latest version -->
+        </dependency>
     </dependencies>
 </project>
